style: 装箱构造器改用 valueOf，避免多余对象创建